// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intercept should intercept a POST fetch with a json body 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "content": Object {
          "some": "request body",
        },
        "headers": Object {
          "some": "header",
        },
        "method": "POST",
        "url": "http://someurl.com",
      },
      "response": Object {
        "content": Object {
          "data": "abc123",
        },
        "headers": undefined,
        "statusCode": 200,
      },
    },
    12345,
  ],
]
`;

exports[`intercept should intercept a plain url 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "content": undefined,
        "headers": undefined,
        "method": "GET",
        "url": "http://someurl.com",
      },
      "response": Object {
        "content": Object {
          "data": "abc123",
        },
        "headers": undefined,
        "statusCode": 200,
      },
    },
    12345,
  ],
]
`;

exports[`intercept should intercept a url with custom options 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "content": undefined,
        "headers": Object {
          "some": "header",
        },
        "method": "GET",
        "url": "http://someurl.com",
      },
      "response": Object {
        "content": Object {
          "data": "abc123",
        },
        "headers": undefined,
        "statusCode": 200,
      },
    },
    12345,
  ],
]
`;

exports[`intercept should log an error to the console when there is a problem submitting request data 1`] = `
Array [
  Array [
    "Error wiretapping fetch request",
  ],
  Array [
    [Error],
  ],
]
`;
